# TinyReactor

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt
.github/workflows/: ci-cd.yml
docs/: user-guide.md
src/api-server/: CMakeLists.txt
src/api-server/include/: api_server.hpp
src/api-server/src/: api_server.cpp  main.cpp
src/common/: CMakeLists.txt
src/common/include/: grpc_client.hpp  hazard_pointer.hpp  logger.hpp  mpmc_queue.hpp  task.hpp  thread_pool.hpp  utils.hpp
src/common/proto/: task.proto
src/common/src/: grpc_client.cpp  thread_pool.cpp  utils.cpp
src/worker/task-executor/: CMakeLists.txt
src/worker/task-executor/include/: task_executor.hpp
src/worker/task-executor/src/: task_executor.cpp
tests/: CMakeLists.txt
tests/unit/api-server-test/: api_server_test.cpp
tests/unit/common-test/: hazptr_test.cpp  task_test.cpp  thread_pool_test.cpp
tests/unit/worker-test/: task_executor_test.cpp
